# linemod_basic_detector

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/linemod_basic_detector/: image_utils.hpp  linemod.hpp  linemod_icp.hpp  linemod_node.hpp  linemod_train_virtual.hpp
include/linemod_basic_detector/rgbd/: rgbd.hpp
src/: linemod.cpp  linemod_icp.cpp  linemod_node.cpp  linemod_train_standalone_kinect.cpp  linemod_train_virtual.cpp
src/rgbd/: depth_to_3d.cpp  depth_to_3d.h  utils.cpp  utils.h
