<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>linemod_basic_detector</name>
  <version>0.0.0</version>
  <description>
    ROS2 Object detection using Linemod and virtual training. This is
    a partial port of the Object Recognition Kitchen's core,
    virtual trainer, and LINEMOD detector.
  </description>
  <author>Vincent Rabaud</author>
  <author email="adam.d.allevato@gmail.com">Adam Allevato</author>
  <maintainer email="allevato@utexas.edu">Adam Allevato</maintainer>

  <license>Apache License 2.0</license>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libopencv-dev</build_depend>
  <build_depend>rclcpp</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ork_renderer</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ork_renderer</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
